2014-01-14  JJ Allaire <jj@rstudio.org>
        * R/: set svn eol-style native for source files
        * src/: set svn eol-style native for source files 
        * inst/include/: set svn eol-style native for source files 

2014-01-13  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use plugin includes in cppFunction; stop with 
        explicit error on Windows then the Rcpl libPath or sourceCpp
        target file contains spaces in it's path; add source file directory
        as an include path for sourceCpp; special handling for sourceCpp
        include paths on windows
        * man/pluginsAttribute.Rd: clarify which fields of plugin are
        used by sourceCpp

2014-01-12  JJ Allaire <jj@rstudio.org>

        * DESCRIPTION: bump version to 0.10.2.2
        * NAMESPACE: add registerPlugin function
        * R/Attributes.R: add registerPlugin function; add plugins parameter
        to cppFunction
        * man/cppFunction.Rd: documentation updates
        * man/pluginsAttribute.Rd: documentation updates
        * man/registerPlugin: documentation updates

2014-01-11  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: initial support for Rcpp::plugins attribute; add
        built-in cpp11 plugin
        * src/attributes.cpp: initial support for Rcpp::plugins attribute

2014-01-04  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: null check on pkginfo depends field

2013-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Applied refinement of previously applied
	patch re *BSD builds, see http://bugs.debian.org/697032 for more

2012-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Added defined() tests for more *BSD family
	members as the build also failed with the FreeBSD Kernel on Debian

2012-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Applied patch kindly supplied by Rainer
	Hurling to support compilation on FreeBSD

2012-12-26  JJ Allaire <jj@rstudio.org>
