@@ -37,12 +37,6 @@ sourceCpp <- function(file = "",
     
     # validate that there are no spaces in the path on windows
     if (.Platform$OS.type == "windows") {
-        if (grepl(' ', find.package("Rcpp"), fixed=TRUE)) {
-            stop("Rcpp is installed within a package library that has spaces ",
-                 "in it's path (", find.package("Rcpp"), "). Rcpp cannot be ",
-                 "built against in this configuration. Please re-install ",
-                 "Rcpp in a package library without spaces in it's path.")
-        }
         if (grepl(' ', basename(file), fixed=TRUE)) {
             stop("The filename '", basename(file), "' contains spaces. This ",
                  "is not permitted.")
@@ -439,20 +433,6 @@ sourceCppFunction <- function(func, isVoid, dll, symbol) {
              error = function(e) NULL) 
 }
 
-# Function to normalize build paths for passing to gcc on the command line
-# Leave them alone for posix (they'll be quoted). For Windows, mirror the
-# behavior of the R package build system by taking the fully resolved
-# absolute path (as a short path name) then convert backslashes to forward
-# slashes.
-.asBuildPath <- function(path) {
-    if (.Platform$OS.type == "windows") {
-        path <- normalizePath(path)
-        path <- utils::shortPathName(path)
-        path <- gsub("\\\\", "/", path)
-    }
-    return(path)
-}
-
 # Setup the build environment based on the specified dependencies. Returns an
 # opaque object that can be passed to .restoreEnvironment to reverse whatever
 # changes that were made
@@ -529,7 +509,7 @@ sourceCppFunction <- function(func, isVoid, dll, symbol) {
     buildEnv$CLINK_CPPFLAGS <- .buildClinkCppFlags(linkingToPackages)
     
     # add source file's directory to the compilation
-    srcDir <- .asBuildPath(dirname(sourceFile))
+    srcDir <- asBuildPath(dirname(sourceFile))
     buildEnv$CLINK_CPPFLAGS <- paste(buildEnv$CLINK_CPPFLAGS, 
                                      paste0('-I"', srcDir, '"'), 
                                      collapse=" ")
@@ -537,7 +517,7 @@ sourceCppFunction <- function(func, isVoid, dll, symbol) {
     # if the source file is in a package then add inst/include
     if (.isPackageSourceFile(sourceFile)) {
         incDir <- file.path(dirname(sourceFile), "..", "inst", "include")
-        incDir <- .asBuildPath(incDir)
+        incDir <- asBuildPath(incDir)
         buildEnv$CLINK_CPPFLAGS <- paste(buildEnv$CLINK_CPPFLAGS, 
                                          paste0('-I"', incDir, '"'), 
                                          collapse=" ")
@@ -615,6 +595,7 @@ sourceCppFunction <- function(func, isVoid, dll, symbol) {
     pkgCxxFlags <- NULL
     for (package in linkingToPackages) {
         packagePath <- find.package(package, NULL, quiet=TRUE)
+        packagePath <- asBuildPath(packagePath)
         pkgCxxFlags <- paste(pkgCxxFlags, 
             paste0('-I"', packagePath, '/include"'), 
             collapse=" ")
