@@ -1,4 +1,8 @@
 2014-01-14  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: handle build paths with spaces on windows
+        * R/RcppLdpath.R: handle build paths with spaces on windows
+        * R/tools.R: handle build paths with spaces on windows
         * R/: set svn eol-style native for source files
         * src/: set svn eol-style native for source files 
         * inst/include/: set svn eol-style native for source files 
